Se añaden los fragmentos de detalle y de vídeo con su documentación detallada. También se han añadido dependencias a las librerías de ExoPlayer, así como algunas funciones de extensión de Glide.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Google TV Leanback</string>
+
+    <string name="video_test_mp4">http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4</string>
 </resources>
