Se añaden los fragmentos de detalle y de vídeo con su documentación detallada. También se han añadido dependencias a las librerías de ExoPlayer, así como algunas funciones de extensión de Glide.
Por otro lado también se ha añadio un GuideStepSupportFragment con toda la documentación de como se implementa.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Google TV Leanback</string>
 
     <string name="video_test_mp4">http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4</string>
+
+    <string name="dialog_fragment_title">Bienvenido</string>
+    <string name="dialog_fragment_desc">¿Quieres acceder a la aplicación?</string>
+    <string name="dialog_fragment_action_enter">Acceder</string>
+    <string name="dialog_fragment_action_cancel">Cancelar</string>
 </resources>
