Se añade el fragmento de ajustes usando la clase de Preferencias que nos brinda Leanback que no es más que la de Android pero adaptada, con toda la explicación y documentación para su mejor comprensión.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="dialog_fragment_desc">¿Quieres acceder a la aplicación?</string>
     <string name="dialog_fragment_action_enter">Acceder</string>
     <string name="dialog_fragment_action_cancel">Cancelar</string>
+
+    <string name="settings_section_title">Ajustes</string>
 </resources>
